# campello_gpu

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  android.cmake  build.bat  build.sh  ios.cmake  linux.cmake  macos.cmake  run_example.bat  run_tests.bat  test.sh  wasm.cmake  windows.cmake
.claude/: settings.local.json
.github/workflows/: ci.yml
cmake/: campello_gpuConfig.cmake.in
examples/android/: settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/android/gradle/: libs.versions.toml
examples/linux/: CMakeLists.txt  README.md  main.cpp  run.sh  triangle_shader.h
examples/wasm/: CMakeLists.txt  index.html  main.cpp
examples/windows/campello_example/: CMakeLists.txt  Renderer.cpp  Renderer.h  main.cpp
inc/campello_gpu/: acceleration_structure.hpp  adapter.hpp  bind_group.hpp  bind_group_layout.hpp  buffer.hpp  buffer_usage.hpp  color_space.hpp  command_buffer.hpp  command_encoder.hpp  compute_pass_encoder.hpp  compute_pipeline.hpp  context.hpp  cooperative_matrix_properties.hpp  depth_stencil_descriptor.hpp  device.hpp  device_def.hpp  fence.hpp  fragment_descriptor.hpp  frame_time_sampler.hpp  metrics.hpp  pipeline.hpp  pipeline_layout.hpp  pixel_format.hpp  query_set.hpp  ray_tracing_pass_encoder.hpp  ray_tracing_pipeline.hpp  render_pass.hpp  render_pass_encoder.hpp  render_pipeline.hpp  render_pipeline_descriptor.hpp  sampler.hpp  shader_module.hpp  state.hpp  storage_mode.hpp  swap_chain.hpp  texture.hpp  texture_type.hpp  texture_usage.hpp  texture_view.hpp  vertex_descriptor.hpp
inc/campello_gpu/constants/: acceleration_structure_build_flag.hpp  acceleration_structure_geometry_type.hpp  aspect.hpp  buffer_usage.hpp  color_space.hpp  compare_op.hpp  cooperative_matrix_component_type.hpp  cull_mode.hpp  feature.hpp  filter_mode.hpp  front_face.hpp  index_format.hpp  pixel_format.hpp  primitive_topology.hpp  (+7 more)
src/: campello_gpu_config.h.in
src/directx/: acceleration_structure.cpp  adapter.cpp  bind_group.cpp  bind_group_layout.cpp  buffer.cpp  command_buffer.cpp  command_encoder.cpp  common.hpp  compute_pass_encoder.cpp  compute_pipeline.cpp  context.cpp  device.cpp  fence.cpp  pipeline_layout.cpp  query_set.cpp  ray_tracing_pass_encoder.cpp  ray_tracing_pipeline.cpp  render_pass_encoder.cpp  render_pipeline.cpp  sampler.cpp  shader_module.cpp  texture.cpp  texture_view.cpp
src/metal/: acceleration_structure.cpp  acceleration_structure_handle.hpp  acceleration_structure_helpers.hpp  adapter.cpp  bind_group.cpp  bind_group_data.hpp  bind_group_layout.cpp  bind_group_layout_data.hpp  buffer.cpp  buffer_handle.hpp  command_buffer.cpp  command_encoder.cpp  common.hpp  compute_pass_encoder.cpp  compute_pipeline.cpp  context.cpp  device.cpp  fence.cpp  pipeline_layout.cpp  pipeline_layout_data.hpp  query_set.cpp  ray_tracing_pass_encoder.cpp  ray_tracing_pipeline.cpp  ray_tracing_pipeline_handle.hpp  render_pass_encoder.cpp  render_pipeline.cpp  render_pipeline_handle.hpp  sampler.cpp  shader_module.cpp  shader_module_handle.hpp  texture.cpp  texture_handle.hpp  texture_view.cpp
src/pi/: device.cpp  pixel_format.cpp  utils.cpp
src/vulkan/: acceleration_structure.cpp  adapter.cpp  bind_group_layout_handle.hpp  buffer.cpp  command_buffer.cpp  command_buffer_handle.hpp  command_encoder.cpp  command_encoder_handle.hpp  common.hpp  compute_pass_encoder.cpp  compute_pipeline.cpp  device.cpp  fence.cpp  pipeline_layout.cpp  query_set.cpp  ray_tracing_pass_encoder.cpp  ray_tracing_pipeline.cpp  render_pass_encoder.cpp  render_pass_encoder_handle.hpp  render_pipeline.cpp  sampler.cpp  shader_module.cpp  texture.cpp  texture_handle.hpp
src/vulkan_android/: acceleration_structure.cpp  acceleration_structure_handle.hpp  adapter.cpp  bind_group.cpp  bind_group_layout.cpp  buffer.cpp  buffer_handle.hpp  campello_cpu_config.h.in  command_buffer.cpp  command_buffer_handle.hpp  command_encoder.cpp  command_encoder_handle.hpp  common.hpp  compute_pass_encoder.cpp  compute_pass_encoder_handle.hpp  compute_pipeline.cpp  compute_pipeline_handle.hpp  device.cpp  device_def.cpp  pipeline_layout.cpp  pipeline_layout_handle.hpp  query_set.cpp  query_set_handle.hpp  ray_tracing_pass_encoder.cpp  ray_tracing_pass_encoder_handle.hpp  ray_tracing_pipeline.cpp  render_pass_encoder.cpp  render_pass_encoder_handle.hpp  render_pipeline.cpp  render_pipeline_descriptor.cpp  render_pipeline_handle.hpp  sampler.cpp  shader_module.cpp  shader_module_handle.hpp  swap_chain.cpp  swap_chain_handle.hpp  texture.cpp  texture_handle.hpp  texture_view.cpp  texture_view_handle.hpp  (+1 more)
src/vulkan_linux/: acceleration_structure.cpp  bind_group_handle.hpp  bind_group_layout.cpp  buffer.cpp  command_buffer.cpp  command_encoder.cpp  command_encoder_handle.hpp  common.hpp  compute_pass_encoder.cpp  compute_pass_encoder_handle.hpp  compute_pipeline.cpp  compute_pipeline_handle.hpp  device.cpp  pipeline_layout.cpp  query_set.cpp  ray_tracing_pass_encoder.cpp  ray_tracing_pipeline_handle.hpp  render_pass_encoder.cpp  render_pass_encoder_handle.hpp  render_pipeline.cpp  sampler.cpp  sampler_handle.hpp  shader_module.cpp  shader_module_handle.hpp  texture.cpp  texture_view.cpp
src/webgpu/: acceleration_structure.cpp  adapter.cpp  bind_group.cpp  bind_group_layout.cpp  buffer.cpp  command_buffer.cpp  command_encoder.cpp  common.hpp  compute_pass_encoder.cpp  compute_pipeline.cpp  conversions.cpp  device.cpp  fence.cpp  pipeline_layout.cpp  query_set.cpp  ray_tracing_pass_encoder.cpp  ray_tracing_pipeline.cpp  render_pass_encoder.cpp  render_pipeline.cpp  sampler.cpp  shader_module.cpp  texture.cpp  texture_view.cpp
tests/: CMakeLists.txt
tests/platform/: test_buffer.cpp  test_command_buffer.cpp  test_command_encoder.cpp  test_compute_pass_encoder.cpp  test_device.cpp  test_fence.cpp  test_frame_ring.cpp  test_raytracing.cpp  test_render_pass_encoder.cpp  test_render_pipeline.cpp  test_shader_module.cpp  test_texture.cpp
tests/universal/: test_constants.cpp  test_constants_extended.cpp  test_descriptors.cpp  test_descriptors_extended.cpp  test_pixel_format.cpp
(+41 files in other folders)
